# wasmlet

./: Cargo.toml  README.md  flake.nix  wasmlet.toml  wex-draft.toml  wex-draft2.toml  wex-draft3.toml  wex.toml  write_vectored.rs
crates/wasmlet/: Cargo.toml
crates/wasmlet/src/: host.rs
crates/wasmlet/src/config/: component.rs  mod.rs  plugin.rs
crates/wasmlet/src/config/env/sockets/: host.rs  mod.rs
crates/wasmlet/src/engine/: mod.rs
crates/wasmlet/src/engine/wasi/cli/: host.rs
crates/wasmlet/src/engine/wasi/http/: mod.rs  proxy.rs
crates/wasmlet/src/engine/wasi/io/: mod.rs  poll.rs  streams.rs
crates/wasmlet/src/engine/workload/: mod.rs  value.rs
crates/wasmlet/wit/: world.wit
crates/wasmx/: Cargo.toml
crates/wasmx/src/: host.rs  lib.rs
crates/wasmx/src/config/: component.rs  mod.rs  service.rs  workload.rs
crates/wasmx/src/config/env/: mod.rs
crates/wasmx/src/config/env/sockets/: host.rs  mod.rs  none.rs
crates/wasmx/src/engine/: bindings.rs  mod.rs  plugin.rs
crates/wasmx/src/engine/wasi/http/host/: types.rs
crates/wasmx/src/engine/wasi/io/: mod.rs  streams.rs
crates/wex/: Cargo.toml
crates/wex-plugin/: Cargo.toml  build.rs
crates/wex-plugin/src/: lib.rs
crates/wex-sys/: Cargo.toml
crates/wex-sys/src/: lib.rs
crates/wex/src/: host.rs  lib.rs  main.rs  wasmtime.rs
crates/wex/src/config/: mod.rs
crates/wex/src/config/component/: mod.rs
crates/wex/src/config/component/network/: host.rs  mod.rs  none.rs
crates/wex/src/engine/: mod.rs  plugin.rs
crates/wex/src/engine/wasi/: mod.rs
crates/wex/src/engine/wasi/cli/: host.rs  mod.rs
crates/wex/src/engine/wasi/clocks/: host.rs  mod.rs
crates/wex/src/engine/wasi/filesystem/: host.rs  mod.rs
crates/wex/src/engine/wasi/http/: body.rs  client.rs  conv.rs  mod.rs  proxy.rs  request.rs  response.rs
crates/wex/src/engine/wasi/http/host/: handler.rs  mod.rs  types.rs
crates/wex/src/engine/wasi/io/: mod.rs  poll.rs
crates/wex/src/engine/wasi/random/: host.rs  mod.rs
crates/wex/src/engine/wasi/sockets/: mod.rs  tcp.rs  udp.rs
crates/wex/src/engine/wasi/sockets/host/: ip_name_lookup.rs  network.rs  tcp.rs  udp.rs
crates/wex/src/engine/workload/: mod.rs  value.rs
crates/wex/src/p3/: bindings.rs  mod.rs
crates/wex/src/p3/cli/: host.rs  mod.rs
crates/wex/src/p3/clocks/: host.rs  mod.rs
crates/wex/src/p3/filesystem/: host.rs  mod.rs
crates/wex/src/p3/random/: host.rs  mod.rs
crates/wex/src/p3/sockets/: mod.rs  tcp.rs  udp.rs  util.rs
crates/wex/src/p3/sockets/host/: ip_name_lookup.rs
crates/wex/src/p3/sockets/host/types/: mod.rs  tcp.rs  udp.rs
crates/wex/src/wasi/: keyvalue.rs  messaging.rs  mod.rs
crates/wex/src/wasi/sockets/: mod.rs  tcp.rs
crates/wex/wit/: deps.toml  world.wit
examples/rust/f1/src/: lib.rs
examples/rust/f1/wit/: world.wit
examples/rust/f2/src/: lib.rs
examples/rust/f2/wit/: world.wit
examples/rust/hello/: component.rs
examples/rust/hello/src/: lib.rs
examples/rust/hello/wit/: world.wit
examples/rust/http/: Cargo.toml
examples/rust/http/src/: lib.rs
examples/rust/memdb/src/: lib.rs
examples/rust/memdb/wit/: world.wit
examples/rust/messaging/wit/: world.wit
examples/rust/plugin/: Cargo.toml
examples/rust/plugin/src/: lib.rs
examples/rust/plugin/wit/: world.wit
examples/rust/redis-http/src/: lib.rs
examples/rust/redis-http/wit/: world.wit
examples/rust/redis/src/: bindings.rs  database.rs  lib.rs  pool.rs  resp3.rs
examples/rust/redis/wit/: world.wit
examples/rust/sockets/src/: main.rs
src/: main.rs
