[workspace]
resolver = "2"
members = ["crates/*", "examples/rust/*"]
default-members = ["crates/wex"]

[workspace.package]
authors = ["Roman Volosatovs <rvolosatovs@riseup.net>"]
categories = ["wasm"]
edition = "2021"
homepage = "https://github.com/rvolosatovs/wex"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/rvolosatovs/wex"

[workspace.dependencies]
anyhow = "1"
async-nats = "0.38"
bytes = "1"
clap = "4"
fastwebsockets = "0.8"
futures = "0.3"
http = "1"
http-body = "1"
http-body-util = "0.1"
humantime = "2"
hyper = "1"
hyper-util = "0.1"
nix = "0.29"
reqwest = { version = "0.11", default-features = false }
rustix = "0.38"
serde = "1"
serde_json = "1"
tokio = "1"
tokio-stream = "0.1"
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
tun = "0.7"
url = "2"
uuid = { version = "1", features = ["fast-rng", "v7"] }
wasi-preview1-component-adapter-provider = "27"
wasmparser = "0.220"
wasmtime = "27"
wasmtime-wasi = "27"
wasmtime-wasi-http = "27"
wit-bindgen = "0.35"
wit-component = "0.220"
