[workspace]
resolver = "2"
members = ["crates/*", "examples/rust/*"]
default-members = ["crates/wex"]

[workspace.package]
authors = ["Roman Volosatovs <rvolosatovs@riseup.net>"]
categories = ["wasm"]
edition = "2021"
homepage = "https://github.com/rvolosatovs/wex"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/rvolosatovs/wex"

[workspace.dependencies]
anyhow = "1"
async-nats = "0.38"
bitflags = "2"
bytes = "1"
cap-fs-ext = "3.4.1"
cap-net-ext = "3.4.1"
cap-rand = { version = "3.4.1", features = ["small_rng"] }
cap-std = "3.4.1"
cap-tempfile = "3.4.1"
cap-time-ext = "3.4.1"
clap = "4"
fastwebsockets = "0.8"
fs-set-times = "0.20.1"
futures = "0.3"
http = "1"
http-body = "1"
http-body-util = "0.1"
humantime = "2"
hyper = "1"
hyper-util = "0.1"
io-extras = "0.18.1"
io-lifetimes = { version = "2.0.3", default-features = false }
nix = "0.29"
reqwest = { version = "0.11", default-features = false }
rustix = "0.38"
serde = "1"
serde_json = "1"
system-interface = { version = "0.27.1", features = ["cap_std_impls"] }
tokio = "1.43"
tokio-stream = "0.1"
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
tun = "0.7"
url = "2"
uuid = { version = "1", features = ["fast-rng", "v7"] }
wasi-preview1-component-adapter-provider = "31"
wasmparser = "0.228"
wasmtime = "31"
wasmtime-wasi = "31"
wasmtime-wasi-http = "31"
windows-sys = "0.59.0"
wit-bindgen = "0.41"
wit-component = "0.228"
