[package]
name = "wasmlet-cli"
version = "0.0.2"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[workspace.package]
authors = ["Roman Volosatovs <rvolosatovs@riseup.net>"]
categories = ["wasm"]
description = "High-performance, embeddable WebAssembly execution engine"
edition = "2021"
homepage = "https://github.com/rvolosatovs/wasmlet"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/rvolosatovs/wasmlet"

[workspace]
resolver = "2"
members = ["crates/*", "examples/rust/*"]

[dependencies]
schemars = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

anyhow = { workspace = true, features = ["std"] }
futures = { workspace = true, features = ["std"] }
clap = { workspace = true, features = [
    "color",
    "derive",
    "env",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
] }
humantime = { workspace = true }
k8s-openapi = { workspace = true, features = ["latest"] }
kube = { workspace = true, features = [
    "client",
    "derive",
    "kubelet-debug",
    "oauth",
    "oidc",
    "ring",
    "runtime",
    "rustls-tls",
    "unstable-client",
    "unstable-runtime",
    "ws",
] }
kube-derive = { workspace = true }
opentelemetry = { workspace = true, features = ["logs"] }
opentelemetry-appender-tracing = { workspace = true }
opentelemetry-stdout = { workspace = true, features = ["logs"] }
opentelemetry_sdk = { workspace = true, features = ["logs"] }
quanta = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = [
    "ansi",
    "env-filter",
    "fmt",
    "smallvec",
    "tracing-log",
] }
wasmlet = { workspace = true }

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
bitflags = { version = "2", default-features = false }
bytes = { version = "1", default-features = false }
cap-fs-ext = { version = "3", default-features = false }
cap-net-ext = { version = "3", default-features = false }
cap-rand = { version = "3", default-features = false }
cap-std = { version = "3", default-features = false }
cap-time-ext = { version = "3", default-features = false }
clap = { version = "4", default-features = false }
cranelift = { version = "0.120", default-features = false }
cranelift-jit = { version = "0.120", default-features = false }
cranelift-module = { version = "0.120", default-features = false }
cranelift-native = { version = "0.120", default-features = false }
fs-set-times = { version = "0.20", default-features = false }
futures = { version = "0.3", default-features = false }
http = { version = "1", default-features = false }
http-body = { version = "1", default-features = false }
http-body-util = { version = "0.1", default-features = false }
humantime = { version = "2", default-features = false }
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", default-features = false }
io-lifetimes = { version = "2", default-features = false }
k8s-openapi = { version = "0.25", default-features = false }
kube = { version = "1", default-features = false }
kube-derive = { version = "1", default-features = false }
libc = { version = "0.2", default-features = false }
libloading = { version = "0.8", default-features = false }
opentelemetry = { version = "0.28", default-features = false }
opentelemetry-stdout = { version = "0.28", default-features = false }
opentelemetry-appender-tracing = { version = "0.28", default-features = false }
opentelemetry_sdk = { version = "0.28", default-features = false }
pin-project-lite = { version = "0.2", default-features = false }
quanta = { version = "0.12", default-features = false }
reqwest = { version = "0.11", default-features = false }
rustix = { version = "1", default-features = false }
rustls = { version = "0.23", default-features = false }
schemars = { version = "0.8", default-features = false }
semver = { version = "1", default-features = false }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
system-interface = { version = "0.27", default-features = false }
tokio = { version = "1", default-features = false }
tokio-rustls = { version = "0.26", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
toml = { version = "0.8", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
url = { version = "2", default-features = false }
wasi-preview1-component-adapter-provider = { version = "34", default-features = false }
wasmlet = { version = "0.0.2", path = "./crates/wasmlet" }
wasmlet-cli = { path = "./." }
wasmparser = { version = "0.229", default-features = false }
wasmtime = { version = "33", default-features = false }
wasmtime-cabish = { version = "0.5", default-features = false }
webpki-roots = { version = "0.26", default-features = false }
wit-bindgen = { version = "0.41", default-features = false }
wit-component = { version = "0.229", default-features = false }
