[package]
name = "wex"
version = "0.1.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
async-nats = { workspace = true }
bitflags = { workspace = true }
bytes = { workspace = true }
cap-fs-ext = { workspace = true }
cap-net-ext = { workspace = true }
cap-rand = { workspace = true }
cap-std = { workspace = true }
cap-time-ext = { workspace = true }
clap = { workspace = true, features = [
    "color",
    "derive",
    "env",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
] }
fastwebsockets = { workspace = true, features = ["upgrade"] }
fs-set-times = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
humantime = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = [
    "http1",
    "http2",
    "server",
    "server-graceful",
    "tokio",
] }
io-lifetimes = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
rustix = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
system-interface = { workspace = true }
tokio = { workspace = true, features = ["fs", "signal"] }
tokio-stream = { workspace = true, features = ["net"] }
tokio-util = { workspace = true, features = ["codec"] }
toml = { workspace = true, features = ["display", "parse", "indexmap"] }
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = [
    "ansi",
    "env-filter",
    "fmt",
    "smallvec",
    "tracing-log",
] }
tun = { workspace = true, features = ["async"] }
url = { workspace = true }
uuid = { workspace = true }
wasi-preview1-component-adapter-provider = { workspace = true }
wasmparser = { workspace = true }
wasmtime = { workspace = true, features = [
    "addr2line",
    "async",
    "cache",
    "coredump",
    "cranelift",
    "demangle",
    "gc",
    "parallel-compilation",
    "runtime",
    "threads",
    "wat",
] }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
wit-component = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["fs", "sched"] }
rustix = { workspace = true, features = ["event", "fs", "net"] }

[target.'cfg(windows)'.dependencies]
io-extras = { workspace = true }
rustix = { workspace = true, features = ["event", "net"] }
windows-sys = { workspace = true }

# The `ring` crate, used to implement TLS, does not build on riscv64 or s390x
[target.'cfg(not(any(target_arch = "riscv64", target_arch = "s390x")))'.dependencies]
tokio-rustls = { version = "0.25.0" }
rustls = { version = "0.22.0" }
webpki-roots = { version = "0.26.0" }
