[package]
name = "example-plugin"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
wasmtime = { workspace = true }   # only required do to a bug in wasmtime bindgen
wex-cli = { workspace = true }
wex-plugin = { workspace = true }
